--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "react-typescript-redux-example",
 	"version": "0.1.0",
 	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/rodrigocfd/react-typescript-redux-example.git"
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.1.1",
 		"@testing-library/react": "^10.0.1",
